deployment/kubernetes/geoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoserver
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: geoserver
  template:
    metadata:
      labels:
        app: geoserver
    spec:
      containers:
        - image: docker.osgeo.org/geoserver:2.28.x
          name: geoserver
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: dagster-result-storage
              mountPath: /opt/geoserver_data/
      volumes:
        - name: dagster-result-storage
          persistentVolumeClaim:
            claimName: dagster-result-storage-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: geoserver
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: geoserver

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: geoserver
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/geoserver`) && HeadersRegexp(`Authorization`, `.+`)
      services:
        - kind: Service
          name: geoserver
          port: 80
      middlewares:
        - name: traefikmiddleware-cors@kubernetescrd
        - name: traefikmiddleware-jwt@kubernetescrd
        - name: traefikmiddleware-rate-limit-registered@kubernetescrd
    - kind: Rule
      match: PathPrefix(`/geoserver`) && !HeadersRegexp(`Authorization`, `.+`)
      services:
        - kind: Service
          name: geoserver
          port: 80
      middlewares:
        - name: traefikmiddleware-cors@kubernetescrd
        - name: traefikmiddleware-rate-limit-anonymous@kubernetescrd
